# play_with_numerical_method

./: CMakeLists.txt  CurvingFitting.cpp  CurvingFitting.h  EigenvectorandEigenvalue.cpp  EigenvectorandEigenvalue.h  NeuralNetWork.cpp  NimericalDifferentaiation.cpp  NimericalDifferentaiation.h  NumericalOptimization.cpp  NumericalOptimization.h  README.md  RMatrix.cpp  RMatrix.h  RVector.cpp  Rvector.h  SolutionofLinearEquation.cpp  SolutionofLinearEquation.h  SoulutionofNonLinearEquation.cpp  SoulutionofNonLinearEquation.h  Test.cpp  Test.h  main.cpp
LinearRegression/: CMakeLists.txt  ChGL.cpp  LinearRegression.cpp  plot.h
